--- a/src/main/metadata/classes/TriggerCaseTriggerHandlerKR.cls
+++ b/src/main/metadata/classes/TriggerCaseTriggerHandlerKR.cls
@@ -8,6 +8,7 @@ public class TriggerCaseTriggerHandlerKR implements TriggerHandlerIf
             System.debug('#########################################-->trigger.isBefore && trigger.isInsert');
             CaseHelper.caseBeforeInsertUpdateEvents(Trigger.new,isInsert,isUpdate,(Map<Id,Case>)trigger.oldMap);
             caseHelperJP.updateCaseDeadline(trigger.new);
+            caseHelperJP.updateGateKeaperforApprovedProcess(trigger.new);
         }
         
         if(trigger.isBefore && trigger.isUpdate)
@@ -16,22 +17,25 @@ public class TriggerCaseTriggerHandlerKR implements TriggerHandlerIf
             CaseHelper.caseBeforeInsertUpdateEvents(Trigger.new,isInsert,isUpdate,(Map<Id,Case>)trigger.oldMap);
             caseHelperJP.calculateComplaintAmount(trigger.new,trigger.oldMap);
             caseHelperJP.updateCaseDeadline(trigger.new,trigger.oldMap);
+            caseHelperJP.updateGateKeaperforApprovedProcess(trigger.new);
         }
         if(trigger.isAfter){
-			 if (trigger.isDelete){               
+             if (trigger.isDelete){               
                caseHelperJP.calculateComplaintAmount(trigger.old);
             } 
             if (trigger.isInsert){
-               caseHelperJP.calculateComplaintAmount(trigger.new); 
+               caseHelperJP.calculateComplaintAmount(trigger.new);
+               caseHelperJP.sharerecord(trigger.new); 
             }
             if (trigger.isUpdate){
                caseHelperJP.calculateComplaintAmount(trigger.new);
+               caseHelperJP.sharerecord(trigger.new);
             }
         }
         // Implementation to addedd as required in market
     }
     public void handleIntegrationTrigger(boolean isInsert,boolean isUpdate,boolean isBefore, boolean isDelete,boolean isAfter)
     {
-    	// Implementation to addedd as required in market
+        // Implementation to addedd as required in market
     }
 }
